fix spacing in footer

--- a/styles/home.less
+++ b/styles/home.less
@@ -49,7 +49,15 @@
 }
 #contact {
 	padding: 50px 0 50px 0;
+	h2 {
+		color: #fff;
+		margin-top: 0;
+	}
 	.basic {
 		color: #fff;
+		ul li {
+			list-style: none;
+			line-height: 25px;
+		}
 	}
 }
